--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rate-x",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@burner-wallet/burner-connect-provider": "^0.1.1",
+    "authereum": "^0.1.0",
+    "@superfluid-finance/js-sdk": "^0.5.5",
+    "web3": "^1.3.1",
+    "web3modal": "^1.9.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "element-ui": "^2.15.6",
+    "mavon-editor": "^2.10.4",
+    "vue": "^2.6.11",
+    "vue-gravatar": "^1.3.1",
+    "vue-router": "^3.4.9",
+    "vue-toasted": "^1.1.28",
+    "vuex": "^3.6.0",
+    "nanoid": "^3.1.25",
+    "vue-happy-scroll": "^2.1.1",
+    "web3.storage": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.11",
