UPDATE V-1.0.4 add smart contracts

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,3 +1,12 @@
 {
-    "ContractAddress":""
+    "Polygon": {
+        "BasePool": "",
+        "PositionManager":"",
+        "MockERC20":""
+    },
+    "BSC": {
+        "BasePool": "",
+        "PositionManager":"",
+        "MockERC20":""
+    }
 }
