UPDATE BSC contract

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -5,6 +5,11 @@
         "MockERC20":"0x41540a028E9E4363caA55C20049c61156F2f65C5"
     },
     "BSC": {
+        "BasePool": "0xe427F94C3E9926d4195c8645a2407500fbA28ec9",
+        "PositionManager":"0xB607ffc06b4D486b692671f86a46EA81FF8218dF",
+        "MockERC20":"0xAb0ed274201BaB22eA5B4cC839d1B42f4Fe1BE34"
+    },
+    "Avalanche": {
         "BasePool": "",
         "PositionManager":"",
         "MockERC20":""
